@@ -4,6 +4,10 @@
 
 #include <testfwk.h>
 
+#ifdef __SDCC
+#pragma disable_warning 93
+#endif
+
 /* { dg-do run }  */
 /* { dg-options "-O2" } */
 
